# hugsncuddles

./: .env.example  .gitignore  main.py  nx.json  pyproject.toml
agent/: graph.py  llm.py  prompts.py  state.py
agent/nodes/: coder.py  planner.py  pr_writer.py  reader.py  test_auditor.py
agent/tools/: ast_transforms.py  backends.py  fs.py  github.py  registry.py  sandbox.py
api/: main.py  schemas.py  settings.py  worker.py
api/routes/: jobs.py
docs/: graft_final_prd.md
docs/superpowers/plans/: 2026-05-06-graft-implementation-plan.md
docs/superpowers/specs/: 2026-05-06-graft-design.md
prompts/: coder.md  coder_retry.md  planner.md  test_auditor.md
test/: conftest.py  test_ui.py
test/helpers/: fakes.py
test/integration/: test_github_tooling.py  test_graph_flow.py
test/security/: test_patch_safety.py  test_sandbox_zip_excludes.py
test/unit/: test_coder_node.py  test_planner_node.py  test_pr_writer_node.py  test_reader_node.py  test_test_auditor_node.py
training/: collect.py
