[project]
name = "graft"
version = "0.1.0"
description = "Graft dependency upgrade agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.0",
    "langchain-openai",
    "fastapi",
    "uvicorn[standard]",
    "arq",
    "redis",
    "asyncpg",
    "psycopg[binary]",
    "langgraph-checkpoint-postgres",
    "openai",
    "pydantic-settings",
    "python-frontmatter",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "libcst",
    "gitpython",
    "httpx",
    "e2b-code-interpreter",
    "langsmith",
    "pygithub>=2.9.1",
    "pytest-json-report>=1.5.0",
    "textual>=8.2.5",
]

[project.optional-dependencies]
training = [
    "torch>=2.3",
    "transformers>=4.47",
    "trl>=0.12",
    "peft>=0.13",
    "datasets",
    "accelerate",
    "bitsandbytes",
    "flash-attn",
    "gymnasium",
]
